re PR rtl-optimization/24460 (Profiled bootstrap broken)

PR rtl-optimization/24460
	* bb-reorder.c (fix_crossing_unconditional_branches): Do not
	set the basic block for barriers.

From-SVN: r105774